# TaskScheduler

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Logger.h  TaskScheduler.h
src/: TaskScheduler.cpp  main.cpp
tests/: CMakeLists.txt  TaskSchedulerTests.cpp
